--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/platform-browser": "14.2.6",
     "@angular/platform-browser-dynamic": "14.2.6",
     "@angular/router": "14.2.6",
+    "@ngneat/until-destroy": "9.2.2",
     "bootstrap": "5.2.2",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
